[gd_scene load_steps=3 format=3 uid="uid://bkusbdp74xdpb"]

[ext_resource type="Texture2D" uid="uid://cxxi48tk2plt2" path="res://Textures/UI/Buttons/button_main_menu_entry.png" id="1_q61pt"]
[ext_resource type="Script" uid="uid://bb1f3l184g61r" path="res://Dialogs/ZoneSelection/zone_selection_element.gd" id="1_y4vpe"]

[node name="ZoneSelectionElement" type="MarginContainer"]
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_y4vpe")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_q61pt")

[node name="MarginContainer" type="MarginContainer" parent="TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TextureButton/MarginContainer"]
layout_mode = 2

[node name="TitleRichTextLabel" type="RichTextLabel" parent="TextureButton/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_type_variation = &"RichTextLabelHeader"
text = ":TODO:"
vertical_alignment = 1

[node name="FilenameRichTextLabel" type="RichTextLabel" parent="TextureButton/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_type_variation = &"RichTextLabelHeader"
text = ":TODO:"
vertical_alignment = 1

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
